Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,6 +31,41 @@ current version all of the optimisation algorithms are based on the
 Alternating Direction Method of Multipliers (ADMM).</p>
 
 <h2>
+<a id="convolutional-sparse-representations" class="anchor" href="#convolutional-sparse-representations" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Convolutional Sparse Representations</h2>
+
+<p>The most significant contribution of this library is the inclusion of
+implementations of recent efficient algorithms for convolutional
+sparse coding and dictionary learning. These algorithms are described
+in the papers</p>
+
+<ul>
+<li>Brendt Wohlberg, "<a href="http://brendt.wohlberg.net/publications/wohlberg-2014-efficient.html">Efficient Convolutional Sparse Coding</a>", in <em>Proceedings of IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</em>, (Florence, Italy), pp. 7173-7177, May 2014</li>
+<li>Brendt Wohlberg, "<a href="http://brendt.wohlberg.net/publications/wohlberg-2016-efficient.html">Efficient Algorithms for Convolutional Sparse Representations</a>", <em>IEEE Transactions on Image Processing</em>, vol. 25, no. 1, pp. 301-315, Jan 2016</li>
+<li>Brendt Wohlberg, "<a href="http://brendt.wohlberg.net/publications/wohlberg-2016-convolutional.html">Convolutional Sparse Representation of Color Images</a>", in <em>Proceedings of the IEEE Southwest Symposium on Image Analysis and Interpretation (SSIAI)</em>, (Santa Fe, NM, USA), Mar 2016</li>
+<li>Brendt Wohlberg, "<a href="http://brendt.wohlberg.net/publications/wohlberg-2016-convolutional2.html">Convolutional Sparse Representations as an Image Model for Impulse Noise Restoration</a>", in <em>Proceedings of the IEEE Image, Video, and Multidimensional Signal Processing Workshop (IVMSP)</em>, (Bordeaux, France), Jul 2016</li>
+<li>Brendt Wohlberg, "<a href="http://brendt.wohlberg.net/publications/wohlberg-2016-boundary.html">Boundary Handling for Convolutional Sparse Representations</a>", in <em>Proceedings of IEEE International Conference on Image Processing (ICIP)</em>, (Phoenix, USA), Sep 2016</li>
+</ul>
+
+<p>This library has been used in a variety of signal and image processing
+applications of convolutional sparse coding methods, including </p>
+
+<ul>
+<li>Brendt Wohlberg, "<a href="http://brendt.wohlberg.net/publications/wohlberg-2014-endogenous.html">Endogenous Convolutional Sparse Representations for Translation Invariant Image Subspace Models</a>", in <em>Proceedings of IEEE International Conference on Image Processing (ICIP)</em>, (Paris, France), pp. 2859-2863, Oct 2014</li>
+<li>Ping-Keng Jao, Yi-Hsuan Yang and Brendt Wohlberg, "<a href="http://brendt.wohlberg.net/publications/jao-2015-informed.html">Informed Monaural Source Separation of Music based on Convolutional Sparse Coding</a>", in <em>Proceedings of IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</em>, (Brisbane, Australia), pp. 236-240, Apr 2015</li>
+<li>Diego Carrera, Giacomo Boracchi, Alessandro Foi and Brendt Wohlberg, "<a href="http://brendt.wohlberg.net/publications/carrera-2015-detecting.html">Detecting Anomalous Structures by Convolutional Sparse Models</a>", in <em>The International Joint Conference on Neural Networks (IJCNN)</em>, (Killarney, Ireland), pp. 1--8, Jul 2015</li>
+<li>Andrea Cogliati, Zhiyao Duan and Brendt Wohlberg, "<a href="http://brendt.wohlberg.net/publications/cogliati-2015-piano.html">Piano Music Transcription with Fast Convolutional Sparse Coding</a>", in <em>Proceedings of the IEEE International Workshop on Machine Learning for Signal Processing</em>, (Boston, MA, USA), pp. 1-6, Sep 2015</li>
+<li>Ping-Keng Jao, Li Su, Yi-Hsuan Yang and Brendt Wohlberg, "<a href="http://brendt.wohlberg.net/publications/jao-2016-monaural.html">Monaural Music Source Separation using Convolutional Sparse Coding</a>", <em>IEEE/ACM Transactions on Audio, Speech, and Language Processing</em>, 2016</li>
+<li>Andrea Cogliati, Zhiyao Duan and Brendt Wohlberg, "<a href="http://brendt.wohlberg.net/publications/cogliati-2016-context.html">Context-dependent Piano Music Transcription with Convolutional Sparse Coding</a>", <em>IEEE/ACM Transactions on Audio, Speech, and Language Processing</em>, 2016</li>
+</ul>
+
+<h2>
+<a id="matlab" class="anchor" href="#matlab" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Matlab</h2>
+
+<p>A Matlab version of this library is
+<a href="http://brendt.wohlberg.net/software/SPORCO/">available</a>, but note
+that future development will concentrate primarily on the Python version.</p>
+
+<h2>
 <a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Requirements</h2>
 
 <p>The primary requirements are Python itself, and modules
